SERVER-130128 Add more test exercising deferred xferMods behavior in chunk migration (#58210)

GitOrigin-RevId: 1d44d057521a508a944758acd427fee739e0ef68